--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "cors": "^2.8.5",
     "firebase": "^10.7.1",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
