--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "firebase": "^10.7.1",
     "gh-pages": "^6.1.1",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
