--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "cors": "^2.8.5",
+    "create-react-app": "^5.0.1",
     "firebase": "^10.7.1",
     "gh-pages": "^6.1.1",
     "json-server": "^0.17.4",
